    particular, this made one of the standard tests crash. (The integer value 
    went into the wrong half of a long int.)
    
3.  If the --colour option was given to pcregrep with -v (invert match), it
    did strange things, either producing crazy output, or crashing. It should,
    of course, ignore a request for colour when reporting lines that do not 
    match. 


Version 8.11 10-Dec-2010
------------------------

1.  (*THEN) was not working properly if there were untried alternatives prior
    to it in the current branch. For example, in ((a|b)(*THEN)(*F)|c..) it
    backtracked to try for "b" instead of moving to the next alternative branch
    at the same level (in this case, to look for "c"). The Perl documentation
    is clear that when (*THEN) is backtracked onto, it goes to the "next
    alternative in the innermost enclosing group".

2.  (*COMMIT) was not overriding (*THEN), as it does in Perl. In a pattern
    such as   (A(*COMMIT)B(*THEN)C|D)  any failure after matching A should
    result in overall failure. Similarly, (*COMMIT) now overrides (*PRUNE) and
    (*SKIP), (*SKIP) overrides (*PRUNE) and (*THEN), and (*PRUNE) overrides
    (*THEN).

3.  If \s appeared in a character class, it removed the VT character from
    the class, even if it had been included by some previous item, for example
    in [\x00-\xff\s]. (This was a bug related to the fact that VT is not part
    of \s, but is part of the POSIX "space" class.)

4.  A partial match never returns an empty string (because you can always
    match an empty string at the end of the subject); however the checking for
    an empty string was starting at the "start of match" point. This has been
    changed to the "earliest inspected character" point, because the returned
    data for a partial match starts at this character. This means that, for
    example, /(?<=abc)def/ gives a partial match for the subject "abc"
    (previously it gave "no match").
